working on top bar

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\new website\In Control Totally 3.png" alt = "In control totally logo">
-    <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\new website\Cyclopedia 2.png" alt = "Cyclopedia logo">
-    <h1>Group Profile</h1>
-    <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
-    <h3> 
-        <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a></h3>
-    <h3> 
-        <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a> </h3>
 
-<h2>
-    <a href="index.html" >Home Page</a>
-    <a href="Team_profiles.html">Team Profiles</a>
+<title>Assessment 2, In control, Totally.</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel = "stylesheet" href = "stylesheet.css">
+
+<div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="Team Profiles.html">Team Profiles</a>
     <a href="Ideal_jobs.html">Ideal Jobs</a>
     <a href="Tools.html">Tools</a>
     <a href="Industry_data.html">Industry Data</a>
@@ -20,7 +16,20 @@
     <a href="References.html">References</a>
     <a href="Feedback.html">Feedback</a>
     <a href="Group_reflection.html">Group Reflection</a></h2>
-    
+
+  </div>
+
+  
+
+<head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\new website\In Control Totally 3.png" alt = "In control totally logo">
+    <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\new website\Cyclopedia 2.png" alt = "Cyclopedia logo">
+    <h1>Group Profile</h1>
+    <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
+    <h3> 
+        <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a></h3>
+    <h3> 
+        <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a> </h3>
+
 
 
         
