--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   
 
-<head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\new website\In Control Totally 3.png" alt = "In control totally logo">
-    <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\new website\Cyclopedia 2.png" alt = "Cyclopedia logo">
+<head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\In Control Totally 3.png" alt = "In control totally logo">
+    <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
     <h1>Group Profile</h1>
     <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
     <h3> 
