--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <title>Assessment 2, In control, Totally.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel = "stylesheet" href = "stylesheet.css">
+
+<!--top graphic-->
 <head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\In Control Totally 3.png" alt = "In control totally logo">
 
-    /* top navigation bar */
+<!--top navigation bar-->
     
 <div class="topnav">
     <a class="active" href="index.html">Home</a>
@@ -22,9 +24,11 @@
 
   </div>
 
-  
 
+<!--app logo-->
     <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
+
+<!--group text-->
     <h1>Group Profile</h1>
     <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
     <h3> 
