updated banner padding

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel = "stylesheet" href = "stylesheet.css">
 
 <!--top graphic-->
-<head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\In Control Totally 3.png" alt = "In control totally logo" class ="center">
+<head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\In Control Totally 3.png" alt = "In control totally logo" class = "banner-logo">
 
 <!--top navigation bar-->
     
