--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
     
 <div class="topnav">
     <a class="active" href="index.html">Home</a>
-    <a href="Team Profiles.html">Team Profiles</a>
+    
+    <div class = "dropdown">
+        <button class = "dropbtn">Team Profiles
+            <i class = "fa fa-carat-down"></i>
+        </button>
+        <div class = "dropdown-content">
+            <a href = "Adam_puckeridge.html">Adam Puckeridge</a>
+            <a href = "Aiden_howlett.html">Aiden Howlett</a>
+            <a href = "Helen_Andrews.html">Helen Andrews</a>
+            <a href = "Joshua_McCorkell.html">Joshua McCorkell</a>
+            <a href = "Robert_Longmore.html">Robert Longmore</a>
+            <a href = "Sean_De_Chavez.html">Sean De Chavez</a>
+        </div>
+    </div>
     <a href="Ideal_jobs.html">Ideal Jobs</a>
     <a href="Tools.html">Tools</a>
     <a href="Industry_data.html">Industry Data</a>
