sorted dropdown arrow crap.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <a class="active" href="index.html">Home</a>
     
     <div class = "dropdown">
-        <button class = "dropbtn">Team Profiles
-            <i class = "fa fa-carat-down"></i>
+        <button class = "dropbtn">Team Profiles&nbsp&nbsp&nbsp&nbsp&nbsp
+            
+            <i class = "arrow-down"></i>
         </button>
         <div class = "dropdown-content">
             <a href = "Adam_puckeridge.html">Adam Puckeridge</a>
@@ -23,7 +24,7 @@
             <a href = "Joshua_McCorkell.html">Joshua McCorkell</a>
             <a href = "Robert_Longmore.html">Robert Longmore</a>
             <a href = "Sean_De_Chavez.html">Sean De Chavez</a>
-        </div>
+        </div> 
     </div>
     <a href="Ideal_jobs.html">Ideal Jobs</a>
     <a href="Tools.html">Tools</a>
