--- a/index.html
+++ b/index.html
@@ -39,16 +39,23 @@
   </div>
 
 
-<!--app logo-->
-    <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
 
 <!--group text-->
     <h1>Group Profile</h1>
-    <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
+    <h3><pre>Prepared by: Adam Puckeridge,
+             Aiden Howlett,
+             Helen Andrews, 
+             Joshua McCorkell,
+             Robert Longmore 
+             and Sean De Chavez</pre> </h3>
     <h3> 
         <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a></h3>
     <h3> 
         <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a> </h3>
+
+<!--app logo-->
+<img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
+
 
 
 
