--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<title>Assessment 2, In control, Totally.</title>
+<title>Adam Puckeridge</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel = "stylesheet" href = "stylesheet.css">
 
@@ -13,7 +13,7 @@
     <a href="index.html">Home</a>
     
     <div class = "dropdown">
-        <button class = "dropbtn">Team Profiles&nbsp&nbsp&nbsp&nbsp&nbsp
+        <button class = "dropbtn-active">Team Profiles&nbsp&nbsp&nbsp&nbsp&nbsp
             
             <i class = "arrow-down"></i>
         </button>
