--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -38,17 +38,15 @@
 
   </div>
 
+</head>
 <!--group text-->
-    <h2>NRURJ</h2>
+<body>   <h2>NRURJ</h2>
     <h3><pre>HYHHHHH</pre> </h3>
     <h4> 
         <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a></h4>
     <h4> 
         <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a> </h4>
 
-<!--app logo-->
-<img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
-
 
 
 
@@ -62,5 +60,5 @@
 
 
 
-</head>
-<body></body>
+
+</body>
