updates profile links. Rob.

--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -43,9 +43,9 @@
 <body>   <h2>NRURJ</h2>
     <h3><pre>HYHHHHH</pre> </h3>
     <h4> 
-        <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a></h4>
+        <a href ="https://ultralights.github.io/RobLongmore/">Personal Profile Github site</a></h4>
     <h4> 
-        <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a> </h4>
+        <a href = "https://github.com/Ultralights/RobLongmore">Gitub Repository</a> </h4>
 
 
 
