--- a/index.html
+++ b/index.html
@@ -55,4 +55,19 @@
 <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
 
 </head>
-<body></body>
+<body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+</body>
