--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <a href = "Joshua_McCorkell.html">Joshua McCorkell</a>
             <a href = "Robert_Longmore.html">Robert Longmore</a>
             <a href = "Sean_De_Chavez.html">Sean De Chavez</a>
+            
         </div> 
+        
     </div>
     <a href="Ideal_jobs.html">Ideal Jobs</a>
     <a href="Tools.html">Tools</a>
@@ -49,7 +51,7 @@
     <h4> 
         <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a></h4>
     <h4> 
-        <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a> </h4>
+        <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></h4><hr>
 
 <!--app logo-->
 <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
