--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -47,7 +47,11 @@
     <h4> 
         <a href = "https://github.com/Ultralights/RobLongmore">Gitub Repository</a> </h4><hr>
         
-    <p>Born in 1974, means I am the old man of the group that is ICT (In Control Totally) This means I was in high school to witness the birth of what would become the internet.  Although this fostered a lifelong interest in information technologies, I also had a love for aviation. I come to this group with over 30 years’ experience as an Aircraft structural Engineer, Pilot, and Flying instructor. Although my career has been aviation focussed, I have never lost the interest, and sense of wonder that the IT industry has provided and will developed into, and its impact on humanity.</p>
+    <p>Born in 1974, means I am the old man of the group that is ICT (In Control Totally)<br>
+        This means I was in high school to witness the birth of what would become the internet.<br>
+        Although this fostered a lifelong interest in information technologies, I also had a love for aviation.<br>
+        I come to this group with over 30 years’ experience as an Aircraft structural Engineer, Pilot, and Flying instructor.<br>
+        Although my career has been aviation focussed, I have never lost the interest, and sense of wonder that the IT industry has provided and will developed into, and its impact on humanity.</p>
 
 
 
