--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   </div>
 
 <!--group text-->
-    <h2>Group Profile</h2>
+    <div class = "main-text">
+        <h2>Group Profile</h2>
     <h3><pre>Prepared by: Adam Puckeridge,
              Aiden Howlett,
              Helen Andrews, 
@@ -52,6 +53,8 @@
         <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a></h4>
     <h4> 
         <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></h4><hr>
+        
+    </div>
 
 <!--app logo-->
 <img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
