--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -47,11 +47,15 @@
     <h4> 
         <a href = "https://github.com/Ultralights/RobLongmore">Gitub Repository</a> </h4><hr>
         
-    <p>Born in 1974, means I am the old man of the group that is ICT (In Control Totally)<br>
+    <p>Born in 1974, means I am the old man of the group that is ICT (In Control, Totally)<br>
         This means I was in high school to witness the birth of what would become the internet.<br>
         Although this fostered a lifelong interest in information technologies, I also had a love for aviation.<br>
         I come to this group with over 30 years’ experience as an Aircraft structural Engineer, Pilot, and Flying instructor.<br>
-        Although my career has been aviation focussed, I have never lost the interest, and sense of wonder that the IT industry has provided and will developed into, and its impact on humanity.</p>
+        Although my career has been aviation focussed, I have never lost interest in the IT industry, and have bene an avid gamer, <br>
+        and enjoyed keeping up with developments in tech and the IT industry. Although my experience is limited to the user level and experimenting,<br>
+        i am keen to learn a lot more, and be an active participant in the IT industry, via my studies into IT via RMIT<br>
+        ensuring that i never lose that sense of wonder that the IT industry has provided and will developed into <br>
+        and play an active part in its impact on humanity.</p>
 
 
 
