updates with main-text spacing

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
 <!--app logo-->
-<img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" style = "width:350px;height:300px;">
+<img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" class = "main-text" style = "width:350px;height:300px;">
 
 </head>
 <body>
