updated class margin

--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -40,7 +40,9 @@
 
 </head>
 <!--group text-->
-<body>   <h2><pre>Robert A Longmore</pre></h2>
+<div  class = "main-text">
+<body><h2><pre>Robert A Longmore</pre></h2>
+    
     <h3><pre>Student No: S3954217</pre></h3>
     <h4> 
         <a href ="https://ultralights.github.io/RobLongmore/">Personal Profile Github site</a></h4>
@@ -56,7 +58,7 @@
         i am keen to learn a lot more, and be an active participant in the IT industry, via my studies into IT via RMIT<br>
         ensuring that i never lose that sense of wonder that the IT industry has provided and will developed into <br>
         and play an active part in its impact on humanity.</p>
-
+</div>
 
 
 
