--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel = "stylesheet" href = "stylesheet.css">
 
 <!--top graphic-->
-<head><img src="C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\In Control Totally 3.png" alt = "In control totally logo" class = "banner-logo">
+<head><img src="images/In Control Totally 3.png" alt = "In control totally logo" class = "banner-logo">
 
 <!--top navigation bar-->
     
@@ -57,7 +57,7 @@
     </div>
 
 <!--app logo-->
-<img src = "C:\Users\RobertLongmore\Nextcloud\Robs RMIT stuff\Introduction to IT\Assessment 2 Group 2\Github\RMIT-COSC2196-IIT-A2\Cyclopedia 2.png" alt = "Cyclopedia logo" class = "main-text" style = "width:350px;height:300px;">
+<img src = "images/Cyclopedia 2.png" alt = "Cyclopedia logo" class = "main-text" style = "width:350px;height:300px;">
 
 </head>
 <body>
