Updated image links and image names with underscore

--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -48,7 +48,7 @@
         <a href ="https://ultralights.github.io/RobLongmore/">Personal Profile Github site</a></h4>
     <h4> 
         <a href = "https://github.com/Ultralights/RobLongmore">Gitub Repository</a> </h4><hr>
-        <img src="images/bad landing.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing">
+        <img src="images/bad_landing.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing">
     <p>Born in 1974, means I am the old man of the group that is ICT (In Control, Totally)<br>
         This means I was in high school to witness the birth of what would become the internet.<br>
         Although this fostered a lifelong interest in information technologies, I also had a love for aviation.<br>
