--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -57,7 +57,7 @@
         and enjoyed keeping up with developments in tech and the IT industry. Although my experience is limited to the user level and experimenting,<br>
         i am keen to learn a lot more, and be an active participant in the IT industry, via my studies into IT via RMIT<br>
         ensuring that i never lose that sense of wonder that the IT industry has provided and will developed into <br>
-        and play an active part in its impact on humanity.</p>
+        and play an active part in its impact on humanity. I AM TOTES AWESOME</p>
 </div>
 
 
