--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -52,7 +52,7 @@
     <p>Born in 1974, means I am the old man of the group that is ICT (In Control, Totally). This means I was in high school to witness the birth of what would become the internet. Although this fostered a lifelong interest in information technologies, I also had a love for aviation.<br>
     I come to this group with over 30 years experience as an Aircraft structural Engineer, Pilot, and Flying instructor.<br>
     Although my career has been aviation focussed, I have never lost interest in the IT industry, and have bene an avid gamer, and enjoyed keeping up with developments in tech and the IT industry. Although my experience is limited to the user level and experimenting,<br>
-    i am keen to learn a lot more, and be an active participant in the IT industry, via my studies into IT via RMIT ensuring that i never lose that sense of wonder that the IT industry has provided and will developed into and play an active part in its impact on humanity. I AM TOTES AWESOME</p>
+    i am keen to learn a lot more, and be an active participant in the IT industry, via my studies into IT via RMIT ensuring that i never lose that sense of wonder that the IT industry has provided and will developed into and play an active part in its impact on humanity.</p>
 </div>
 
 
