--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="Tools.html">Tools</a>
     <a href="Industry_data.html">Industry Data</a>
     <a href="IT_work.html">IT Work</a>
-    <!--dropdown-->
+    <!--IT technologies dropdown-->
     <div class = "dropdown">
         <button class = "dropbtn">IT Technologies&nbsp&nbsp&nbsp&nbsp&nbsp
             
