beginning populating personal pages

--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -52,7 +52,7 @@
 
 <!--group text-->
 <div  class = "main-text">
-    <body><h2><pre>Helen Andrews</pre></h2>
+    <body><h2><pre>Helen Isabella Jean Andrews</pre></h2>
         
         <h4>Student No: XXXXXXXX</h4>
         <h4> 
