--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -56,9 +56,8 @@
     <body><h2><pre>Adam Puckeridge</pre></h2>
         
         <h4>Student No: S3964092</h4>
-        <h4> 
-            <a href ="https://amprok.github.io/IIT">Personal Profile Github site</a></h4>
-        <h4> 
+        <h4><a href ="https://amprok.github.io/IIT">Personal Profile Github site</a></h4>
+        <h4><a href="mailto:S3964092@student.rmit.edu.au">Email</a>
          
 
 
