updated Rob and Sean links and email

--- a/Sean_De_Chavez.html
+++ b/Sean_De_Chavez.html
@@ -54,11 +54,10 @@
 <div  class = "main-text">
     <body><h2><pre>Sean Antonio Miguel Reyes De Chavez</pre></h2>
         
-        <h4>Student No: XXXXXXXX</h4>
-        <h4> 
-            <a href ="https://ultralights.github.io/RobLongmore/">Personal Profile Github site</a></h4>
-        <h4> 
-            <a href = "https://github.com/Ultralights/RobLongmore">Gitub Repository</a> </h4><hr>
+        <h4>Student No: s3960496</h4>
+        <h4><a href ="https://seandechavez.github.io/sdc.iit.assignment1.io/">Personal Profile Github site</a></h4>
+        <h4><a href = "https://github.com/seandechavez/sdc.iit.assignment1.io">Gitub Repository</a> </h4>
+        <h4><a href = "mailto:s3964096@student.rmit.edu.au">Email</a></h4><hr>
 
 
 
