udated Machine learning and tech pages

--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -50,15 +50,15 @@
 
   </div>
 
-<!--group text-->
+
     <div class = "main-text">
         <h2>Cyber Security</h2>
     <h3><pre>Prepared by: Joshua McCorkell</pre></h3><hr>
-          
+    
     </div>
 
 
 
 
-
+<body class = "main-text">
 </body>
