updates class for layout

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -53,7 +53,8 @@
 
 <!--group text-->
 <div  class = "main-text">
-    <body><h2><pre>Adam Puckeridge</pre></h2>
+    <body class = "main-text">
+        <h2><pre>Adam Puckeridge</pre></h2>
         
         <h4>Student No: S3964092</h4>
         <h4><a href ="https://amprok.github.io/IIT">Personal Profile Github site</a></h4>
