--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <img src = "images/Cyclopedia_2.png" alt = "Cyclopedia logo" class = "main-text" style = "width:350px;height:300px;">
 
 </head>
-<body>
+<body class = "main-text">
 
     
 </body>
