--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -52,7 +52,8 @@
 
 <!--group text-->
 <div  class = "main-text">
-    <body><h2><pre>Helen Isabella Jean Andrews</pre></h2>
+<body class = "main-text">
+        <h2><pre>Helen Isabella Jean Andrews</pre></h2>
         
         <h4>Student No: s3965754</h4>
         <h4><a href = "https://helenandrews.github.io/HelenAndrews-HelenAndrewsAT1/">Personal Profile Github site</a></h4>
