--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -52,7 +52,8 @@
 
 <!--group text-->
 <div  class = "main-text">
-    <body><h2><pre>Joshua M<sup>c</sup>Corkell</pre></h2>
+<body class = "main-text">
+        <h2><pre>Joshua M<sup>c</sup>Corkell</pre></h2>
         
         <h4>Student No: S3960141</h4>
         <h4><a href ="https://joshuamccorkell.github.io/">Personal Profile Github site</a></h4>
