--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -53,7 +53,8 @@
 </head>
 <!--group text-->
 <div  class = "main-text">
-<body><h2><pre>Robert A. Longmore</pre></h2>
+<body class = "main-text">
+    <h2><pre>Robert A. Longmore</pre></h2>
     
     <h4>Student No: S3954217</h4>
     
