updated font and H4

--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -53,7 +53,7 @@
 <!--group text-->
 <div  class = "main-text">
 <body class = "main-text">
-        <h2><pre>Helen Isabella Jean Andrews</pre></h2>
+        <h2>Helen Isabella Jean Andrews</h2>
         
         <h4>Student No: s3965754</h4>
         <h4><a href = "https://helenandrews.github.io/HelenAndrews-HelenAndrewsAT1/">Personal Profile Github site</a></h4>
