--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -54,7 +54,7 @@
 <!--group text-->
 <div  class = "main-text">
 <body class = "main-text">
-    <h2><pre>Robert A. Longmore</pre></h2>
+    <h2>Robert A. Longmore</h2>
     
     <h4>Student No: S3954217</h4>
     
