--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -54,7 +54,7 @@
 <!--group text-->
 <div  class = "main-text">
     <body class = "main-text">
-        <h2><pre>Adam Puckeridge</pre></h2>
+        <h2>Adam Puckeridge</h2>
         
         <h4>Student No: S3964092</h4>
         <h4><a href ="https://amprok.github.io/IIT">Personal Profile Github site</a></h4>
