--- a/Aiden_howlett.html
+++ b/Aiden_howlett.html
@@ -53,7 +53,7 @@
 <!--group text-->
 <div  class = "main-text">
 <body class = "main-text">
-        <h2><pre>Aiden Howlett</pre></h2>
+        <h2>Aiden Howlett</h2>
         
         <h4>Student No: 3962116</h4>
         <h4><a href ="https://aidenh37.github.io/RMIT-s3962116/">Personal Profile Github site</a></h4>
