--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -53,7 +53,7 @@
 <!--group text-->
 <div  class = "main-text">
 <body class = "main-text">
-        <h2><pre>Joshua M<sup>c</sup>Corkell</pre></h2>
+        <h2>Joshua M<sup>c</sup>Corkell</h2>
         
         <h4>Student No: S3960141</h4>
         <h4><a href ="https://joshuamccorkell.github.io/">Personal Profile Github site</a></h4>
