--- a/Sean_De_Chavez.html
+++ b/Sean_De_Chavez.html
@@ -53,7 +53,7 @@
 <!--group text-->
 <div  class = "main-text">
 <body class = "main-text">
-        <h2><pre>Sean Antonio Miguel Reyes De Chavez</pre></h2>
+        <h2>Sean Antonio Miguel Reyes De Chavez</h2>
         
         <h4>Student No: s3960496</h4>
         <h4><a href ="https://seandechavez.github.io/sdc.iit.assignment1.io/">Personal Profile Github site</a></h4>
