added div to main text  on machine learning

--- a/IT_tech_machinelearning.html
+++ b/IT_tech_machinelearning.html
@@ -60,6 +60,7 @@
 
 <!--main text-->
 <body class = "main-text">
+    <div class = "main-text">
 <p><b>What does it do?</b></p>
     <p>Machine learning and AI (Artificial Intelligence) is an area of technology that has experienced exceptionally large amounts of growth in recent years.
      Machine learning can be used for almost any task that involves data processing and data analysis, such as facial recognition, natural language processing,
@@ -139,6 +140,7 @@
 
     <p>As for my personal life, I believe products like Github Copilot have the potential to change things for me, as someone who is studying with the idea of getting a job as a programmer or software developer.
      Whether it will be a change for the better or worse, only time will tell.</p>
+     </div>
     </body>
 
 
