updated machine learning references

--- a/IT_tech_machinelearning_references.html
+++ b/IT_tech_machinelearning_references.html
@@ -80,3 +80,35 @@
 <!--main text-->
 <body class = "main-text">
     <div class = "main-text">
+
+    <p>BBC 2016, ‘Artificial intelligence: Google’s AlphaGo beats Go master Lee Se-dol', BBC News, 12 March, viewed 5 July 2022, <a href ="https://www.bbc.com/news/technology-35785875">https://www.bbc.com/news/technology-35785875"</a></p>
+
+    <p>Github 2022, Github Copilot, your AI pair programmer, Github, viewed 5 July 2022, <a href = "https://github.com/features/copilot">https://github.com/features/copilot</a></p>
+
+    <p>Gladstone, N 2018, ‘Surveillance state: NSW intensifies citizen tracking’, Sydney Morning Herald, 4 November, viewed 5 July 2022, <a href = "https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html">https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html </p>
+
+    <p>May, M 2021, ‘Eight ways machine learning is assisting medicine’, Nature Medicine, vol. 27, no. 2-3, viewed 5 June 2022, <a href = "https://doi.org/10.1038/s41591-020-01197-2"></a></p>
+
+    <p>Mythic 2022, Power-efficient AI acceleration for the edge, Mythic, viewed 5 July 2022,  <a href = "https://mythic.ai/">https://mythic.ai/</a></p>
+
+    <p>Muller, D 2022, Future computers will be radically different, YouTube, 1 March, viewed 5 July 2022, <a href = "https://www.youtube.com/watch?v=GVsUOuSjvcg&ab_channel=Veritasium">https://www.youtube.com/watch?v=GVsUOuSjvcg&ab_channel=Veritasium</a></p>
+
+    <p>OpenAI 2022a, OpenAI API, OpenAI, viewed 7 July 2022, <a href = "https://openai.com/api/">https://openai.com/api/</a></p>
+
+    <p>OpenAI 2022b, OpenAI playground, OpenAI, viewed 7 July 2022, <a href = "https://beta.openai.com/playground/">https://beta.openai.com/playground/</a></p>
+
+    <p>OpenAI 2022c, Dall-E 2, OpenAI, viewed 5 July 2022, <a href = "https://openai.com/dall-e-2/">https://openai.com/dall-e-2/</a></p>
+
+    <p>Purtill, J 2022, ‘Danny’s workmate is called GPT-3. You’ve probably read its work without realising it’s an AI’, ABC News, 29 May, viewed 5 July 2022, <a href = "https://www.abc.net.au/news/science/2022-05-29/artificial-intelligence-rise-of-text-generation-gpt-3/101101804">ttps://www.abc.net.au/news/science/2022-05-29/artificial-intelligence-rise-of-text-generation-gpt-3/101101804</a></p>
+
+    <p>Silver, D, Huang, A, Maddison, C J, Guez, A, Sifre, L, Driessche, G, Schrittwieser, J, Antonoglou, I, Panneershelvam, V, Lanctot, M, Dieleman, S, Grewe, D, Nham, J, Kalchbrenner, N, Sutskever, I, Lillicrap, T, Leach, M, Kavukcuoglu, K, Graepel, T & Hassabis, D 2016, ‘Mastering the game of Go with deep neural networks and tree search’, Nature, vol. 529, pp. 484-489. <a href = "https://storage.googleapis.com/deepmind-media/alphago/AlphaGoNaturePaper.pdf">https://storage.googleapis.com/deepmind-media/alphago/AlphaGoNaturePaper.pdf</a></p>
+
+    <p>Silver, D, Hubert, T, Schrittwieser, J, Antonogluo, I, Lai, M, Guez, A, Lanctot, M, Sifre, L, Kumaran, D, Graepel, T, Lillicrap, T, Simonyan, K & Hassabis, D 2018, ‘A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play', Science, vol. 362, no. 6419, pp. 1140-1144. <a href = "https://doi.org/10.1126/science.aar6404">https://doi.org/10.1126/science.aar6404</a></p>
+
+    <p>Silver, D, Schrittwieser, J, Simonyan, K, Antonoglou, I, Huang, A, Guez, A, Hubert, T, Baker, L, Lai, M, Bolton, A, Chen, Y, Lillicrap, T, Hui, F, Sifre, L, Driessche, G, Graepel, T & Hassabis, D 2017, ‘Mastering the game of Go without human knowledge’, Nature, vol. 550, pp. 354-359. <a href = "https://doi.org/10.1038/nature24270">https://doi.org/10.1038/nature24270</a></p>
+
+
+
+
+
+    
