fixed link error in machine learning referecnes

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -79,7 +79,7 @@
         <h4><a href ="https://amprok.github.io/IIT">Personal Profile Github site</a></h4>
         <h4><a href="mailto:S3964092@student.rmit.edu.au">Email</a></h4>
         <hr>
-
+        <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge">
 </head>
 <body>
     <p>Adam was born in Australia & grew up in the Sutherland Shire in NSW. He moved in 2017 to Blayney in the NSW Central West.
