--- a/IT_tech_machinelearning_references.html
+++ b/IT_tech_machinelearning_references.html
@@ -85,9 +85,9 @@
 
     <p>Github 2022, Github Copilot, your AI pair programmer, Github, viewed 5 July 2022, <a href = "https://github.com/features/copilot">https://github.com/features/copilot</a></p>
 
-    <p>Gladstone, N 2018, ‘Surveillance state: NSW intensifies citizen tracking’, Sydney Morning Herald, 4 November, viewed 5 July 2022, <a href = "https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html">https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html </p>
+    <p>Gladstone, N 2018, ‘Surveillance state: NSW intensifies citizen tracking’, Sydney Morning Herald, 4 November, viewed 5 July 2022, <a href = "https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html">https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html </a></p>
 
-    <p>May, M 2021, ‘Eight ways machine learning is assisting medicine’, Nature Medicine, vol. 27, no. 2-3, viewed 5 June 2022, <a href = "https://doi.org/10.1038/s41591-020-01197-2"></a></p>
+    <p>May, M 2021, ‘Eight ways machine learning is assisting medicine’, Nature Medicine, vol. 27, no. 2-3, viewed 5 June 2022, <a href = "https://doi.org/10.1038/s41591-020-01197-2">https://doi.org/10.1038/s41591-020-01197-2</a></p>
 
     <p>Mythic 2022, Power-efficient AI acceleration for the edge, Mythic, viewed 5 July 2022,  <a href = "https://mythic.ai/">https://mythic.ai/</a></p>
 
