updates personal profiles, adding Helens page

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -5,7 +5,7 @@
 <link rel = "stylesheet" href = "stylesheet.css">
 
 <!--top graphic-->
-<head><img src="images/In_Control_Totally_3.png" alt = "In control totally logo" class = "banner-logo">
+<head><img src="images/In_Control_Totally_3.png" alt = "In control totally logo" class = "banner-logo"></head>
 
 <!--top navigation bar-->
   
@@ -62,8 +62,8 @@
 
   </div>
 
-</head>
-<!--group text-->
+
+<!--profile text-->
 <div  class = "main-text">
     <body class = "main-text">
         <h2>Adam Puckeridge</h2>
@@ -80,7 +80,7 @@
         <h4><a href="mailto:S3964092@student.rmit.edu.au">Email</a></h4>
         <hr>
         <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge">
-</head>
+    </body>
 <body>
     <p>Adam was born in Australia & grew up in the Sutherland Shire in NSW. He moved in 2017 to Blayney in the NSW Central West.
      Adams first passion is music and playing the guitar and drums, with anything related to technology being a close second.
