--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -78,7 +78,7 @@
         
         <h4><a href ="https://amprok.github.io/IIT">Personal Profile Github site</a></h4>
         <h4><a href="mailto:S3964092@student.rmit.edu.au">Email</a></h4>
-        <hr>
+        <hr><!--horizontal line-->
         <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge">
     </body>
 <body>
