--- a/Aiden_howlett.html
+++ b/Aiden_howlett.html
@@ -82,7 +82,7 @@
         <h4><a href ="https://aidenh37.github.io/RMIT-s3962116/">Personal Profile Github site</a></h4>
         <h4><a href = "https://github.com/aidenh37">Gitub Repository</a></h4>
         <h4><a href="mailto:s3962116@student.rmit.edu.au">Email</a></h4>
-        <hr>
+        <hr><!--horizontal line-->
         
             <img src="images/aidenhowlett.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Aiden Howlett">
 
