--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -80,7 +80,7 @@
                 </ul>
         <h4><a href = "https://helenandrews.github.io/HelenAndrews-HelenAndrewsAT1/">Personal Profile Github site</a></h4>
         <h4><a href = "mailto:S3965754@student.rmit.edu.au">Email</a></h4>
-        <hr>
+        <hr><!--horizontal line-->
         <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews">
 
 
