--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -79,7 +79,7 @@
         
         <h4><a href ="https://joshuamccorkell.github.io/">Personal Profile Github site</a></h4>
         <h4><a href = "mailto:s3060141@student.rmit.edu.au">Email</a></h4>
-        <hr>
+        <hr><!--horizontal line-->
         <img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell">
 <body>
     <p>Joshua McCorkell is a 16-year-old student from Hervey Bay, Queensland. He has been home-schooled for almost 5 years, and is currently transitioning from home-schooling to university studies. He was born in Brisbane, and currently lives in Hervey Bay. His main experience in IT is in computer programming. He can code in Java and Python and has been mostly self-taught up to this point. In his spare time, he enjoys playing chess and basketball.</p>
