updates grammar on Rob page

--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -74,10 +74,10 @@
             <h4>Education</h4>
                 <ul>
                     <li>HSC Gymea Technology High School </li>
-                    <li>Aircraft Structures Engineering First Class. QANTAS AIRWAYS/TAFE </li>
-                    <li>Graduate Certificate in Aviation Management UNSW </li>
-                    <li>Private Pilot's Licence, Flight Instructor Grade 1 CASA/RAAus </li>
-                    <li>RPAS Flight controllers certificate, RPAS instructor rating CASA </li>
+                    <li>Aircraft Structures Engineering First Class. (QANTAS AIRWAYS/TAFE) </li>
+                    <li>Graduate Certificate in Aviation Management (UNSW) </li>
+                    <li>Private Pilot's Licence, Flight Instructor Grade 1 (CASA/RAAus) </li>
+                    <li>RPAS Flight controllers certificate, RPAS instructor rating (CASA) </li>
                 </ul>
     <h4><a href ="https://ultralights.github.io/RobLongmore/">Personal Profile Github site</a></h4>
     <h4><a href = "https://github.com/Ultralights/RobLongmore">Gitub Repository</a></h4>
