added footer to every page

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -65,6 +65,7 @@
 
 <!--profile text-->
 <div  class = "main-text">
+    <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge">
     <body class = "main-text">
         <h2>Adam Puckeridge</h2>
         <h4>Student No: S3964092</h4>
@@ -79,7 +80,7 @@
         <h4><a href ="https://amprok.github.io/IIT">Personal Profile Github site</a></h4>
         <h4><a href="mailto:S3964092@student.rmit.edu.au">Email</a></h4>
         <hr><!--horizontal line-->
-        <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge">
+        
     </body>
 <body>
     <p>Adam was born in Australia & grew up in the Sutherland Shire in NSW. He moved in 2017 to Blayney in the NSW Central West.
@@ -87,4 +88,18 @@
       He is currently working full time as a car salesperson with Toyota. I am studying IT as I would like to move into a field that I enjoy.</p>
     </body>
 
-    <!--footer-->
+ <!--footer-->
+<footer>
+    <div>
+        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+            <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
+            <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
+            <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
+            <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
+        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+        © 2022 In Control Totally
+    </div>
+</footer>
+
