--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -65,6 +65,7 @@
 </head>
 <!--group text-->
 <div  class = "main-text">
+    <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews">
     <body class = "main-text">
             
             <h2>Helen Andrews</h2>
@@ -81,9 +82,23 @@
         <h4><a href = "https://helenandrews.github.io/HelenAndrews-HelenAndrewsAT1/">Personal Profile Github site</a></h4>
         <h4><a href = "mailto:S3965754@student.rmit.edu.au">Email</a></h4>
         <hr><!--horizontal line-->
-        <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews">
+     
 
 
 <body>
     <p>Helen is a part time student studying in Launceston, Tasmania and member of group 2 known collectively as “ICT stands for In Control Totally”. When it's cold outside, you will find Helen indoors playing video games and studying. Currently working as a System Administrator for a Tasmanian owned Health Fund and being exposed to new technologies in the field has sparked her interest in completing a Bachelor of Information Technology</p>
 </body>
+<!--footer-->
+<footer>
+    <div>
+        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+            <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
+            <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
+            <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
+            <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
+        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+        © 2022 In Control Totally
+    </div>
+</footer>
