--- a/IT_tech_machinelearning_references.html
+++ b/IT_tech_machinelearning_references.html
@@ -108,7 +108,17 @@
     <p>Silver, D, Schrittwieser, J, Simonyan, K, Antonoglou, I, Huang, A, Guez, A, Hubert, T, Baker, L, Lai, M, Bolton, A, Chen, Y, Lillicrap, T, Hui, F, Sifre, L, Driessche, G, Graepel, T & Hassabis, D 2017, ‘Mastering the game of Go without human knowledge’, Nature, vol. 550, pp. 354-359. <a href = "https://doi.org/10.1038/nature24270">https://doi.org/10.1038/nature24270</a></p>
 
 
-
-
-
-    
+</div>    <!--footer-->
+<footer>
+    <div>
+        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+            <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
+            <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
+            <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
+            <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
+        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+        © 2022 In Control Totally
+    </div>
+</footer>
