--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -64,7 +64,9 @@
 
 </head>
 <!--group text-->
+
 <div  class = "main-text">
+    <img src="images/bad_landing.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing">
     <body class = "main-text">
             
             <h2>Robert Longmore</h2>
@@ -83,11 +85,21 @@
     <h4><a href = "https://github.com/Ultralights/RobLongmore">Gitub Repository</a></h4>
     <h4><a href = "mailto:S3954217@student.rmit.edu.au">Email</a></h4>
     <hr><!--horizontal line-->
-        <img src="images/bad_landing.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing">
+       
     <p>Born in 1974, makes Robert the oldest of the group that is ICT (In Control, Totally). He was in high school to witness the birth of what would become the internet. Although this fostered a lifelong interest in information technologies, Rob has a love for Aviation. He comes to this group with over 30 years’ experience as an Aircraft Structural Engineer, Pilot, and Flying instructor. Although his career has been aviation focussed, he has never lost interest in the IT industry, is an avid gamer, and enjoys keeping up with developments in tech and the IT industry. Although his experience is limited to the user level and experience, he is keen to learn a lot more, and be an active participant in the IT industry. Via Robs studies into IT at RMIT, he hopes to never lose that sense of wonder that the IT industry has provided and will develop into and be an active part in IT’s role in its future</p>
 </div>
-
-
-
-
 </body>
+<!--footer-->
+<footer>
+    <div>
+        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+            <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
+            <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
+            <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
+            <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
+        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+        © 2022 In Control Totally
+    </div>
+</footer>
