--- a/index.html
+++ b/index.html
@@ -71,28 +71,17 @@
   </div>
 <!--footer-->
 <footer>
-        <div class = "main-text">
-        <hr><!--horizontal line-->
-        <p>Group Profile</p>
-    <p>Prepared by:
-        <div class = "indent"> Adam Puckeridge,<br>
-        <div class = "indent"> Aiden Howlett,<br>
-        <div class = "indent"> Helen Andrews,<br>
-        <div class = "indent"> Joshua McCorkell,<br>
-        <div class = "indent"> Robert Longmore<br>
-        <div class = "indent"> and Sean De Chavez</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-    <a href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a><br>
-    <a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a>
- 
-    <hr><!-- horizontal line-->
-        
+    <div>
+        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+            <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
+            <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
+            <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
+            <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
+        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+        © 2022 In Control Totally
     </div>
-
 </footer>
 
 
