--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -65,6 +65,7 @@
 </head>
 <!--group text-->
 <div  class = "main-text">
+    <img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell">
     <body class = "main-text">
         <h2>Joshua M<sup>c</sup>Corkell</h2>
         <h4>Student No: S3960141</h4>
@@ -80,7 +81,21 @@
         <h4><a href ="https://joshuamccorkell.github.io/">Personal Profile Github site</a></h4>
         <h4><a href = "mailto:s3060141@student.rmit.edu.au">Email</a></h4>
         <hr><!--horizontal line-->
-        <img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell">
+       
 <body>
     <p>Joshua McCorkell is a 16-year-old student from Hervey Bay, Queensland. He has been home-schooled for almost 5 years, and is currently transitioning from home-schooling to university studies. He was born in Brisbane, and currently lives in Hervey Bay. His main experience in IT is in computer programming. He can code in Java and Python and has been mostly self-taught up to this point. In his spare time, he enjoys playing chess and basketball.</p>
 </body>
+<!--footer-->
+<footer>
+    <div>
+        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+            <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
+            <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
+            <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
+            <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
+        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+        © 2022 In Control Totally
+    </div>
+</footer>
