fixed footer width

--- a/Sean_De_Chavez.html
+++ b/Sean_De_Chavez.html
@@ -86,6 +86,7 @@
 <body>
     <p>Sean is 22 years old and Buddhist, Sean’s family immigrated to Australia from the Philippines when Sean was 8 years old. Sean speaks both Tagalog and English at home. After high school, Sean enrolled for a Bachelor of Social Sciences, but Sean did not complete the degree due to life circumstances, but I am ready now to go back to school and learn again. Sean is a gamer, and the games Sean currently plays are League of Legends and Teamfight Tactics both by Riot Games although recently Sean has been spending less time gaming and more time studying. Sean’s hobbies other than gaming are exercising, yoga, reading and book club with Sean’s online friends.</p>
 </body>
+</div>
 <!--footer-->
 <footer>
     <div>
