--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -87,7 +87,7 @@
      Adams first passion is music and playing the guitar and drums, with anything related to technology being a close second.
       He is currently working full time as a car salesperson with Toyota. I am studying IT as I would like to move into a field that I enjoy.</p>
     </body>
-
+</div>
  <!--footer-->
 <footer>
     <div>
